# valis

./: Dockerfile  cosmx_vs_mif_alignment.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  containers.yml
docker/: docker_download_weights.py
docs/: conf.py
examples/: acrobat_grand_challenge.py  pytorch_feature_detectors.py  register_and_merge_cycif.py  register_ihc.py  warp_other_image.py  warp_points.py
examples/acrobat_2023/valis/: affine_optimizer.py  feature_detectors.py  feature_matcher.py  micro_rigid_registrar.py  non_rigid_registrars.py  preprocessing.py  registration.py  serial_non_rigid.py  serial_rigid.py  slide_io.py  slide_tools.py  viz.py  warp_tools.py
src/valis/: affine_optimizer.py  feature_matcher.py  micro_rigid_registrar.py  non_rigid_registrars.py  preprocessing.py  serial_non_rigid.py  serial_rigid.py  slide_io.py  valtils.py  viz.py
src/valis/cli/: all_mode_whole_slide_alignment.py  extract_aggregated_cosmx.py  mif_cosmx_correlation.py
src/valis/superglue_models/: superglue.py  superpoint.py
tests/: conftest.py  test_examples.py
valis/: __init__.py  affine_optimizer.py  feature_detectors.py  feature_matcher.py  micro_rigid_registrar.py  non_rigid_registrars.py  preprocessing.py  registration.py  serial_non_rigid.py  serial_rigid.py  slide_io.py  slide_tools.py  valtils.py  viz.py  warp_tools.py
valis/superglue_models/: matching.py  utils.py
