[project]
name = "valis"
version = "1.2.0"
description = ""
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Chandler Gatenbee", email = "chandlergatenbee@gmail.com"},
]

maintainers = [
    {name = "Chandler Gatenbee", email = "chandlergatenbee@gmail.com"},
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "beautifulsoup4<5.0.0,>=4.11.1",
    "colorama<1.0.0,>=0.4.6",
    "colour-science>0.4.2",
    "fastcluster<2.0.0,>=1.2.6",
    "matplotlib<4.0.0,>=3.6.3",
    "numpy>1.23,<2.0.0",
    "ome-types<1.0.0,>=0.3.2",
    "opencv-contrib-python-headless==4.9.0.80",
    "pandas>=2.0.0",
    "pillow>=10.3.0",
    "scikit-learn<2.0.0,>=1.2.0",
    "scipy<2.0.0,>=1.10.0",
    "shapely<3.0.0,>=2.0.0",
    "tqdm<5.0.0,>=4.64.1",
    "weightedstats<1.0.0,>=0.4.1",
    "pqdm<1.0.0,>=0.2.0",
    "markupsafe<3.0.0,>=2.0.0",
    "aicspylibczi<4.0.0,>=3.1.2",
    "setuptools>=69.0.3",
    "scikit-image<1.0.0,>=0.24.0",
    "kornia<1.0.0,>=0.7.3",
    "einops<1.0.0,>=0.8.0",
    "torchvision<1.0.0,>=0.20.1",
    "openpyxl<4.0.0,>=3.1.5",
    "simpleitk<3.0.0,>=2.4.1",
    "lxml>=5.4.0",
    "pyvips>2.2.1",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
    "black>=24.0.0",
]
